Don't trigger on changes in workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - README.md
+      - .github/workflows/*
   pull_request:
     branches: [ "main" ]
     paths-ignore:
       - README.md
+      - .github/workflows/*
   workflow_dispatch:
 
 jobs:
