--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ where = ["src"]
 current_version = "0.5.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "Bump version {old_version} -> {new_version}"
-tag_message = "{new_version}"
+tag_message = "v{new_version}"
 commit = true
 tag = true
 push = false
